# gd_mqtt_com

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_gd_mqtt.sh  build_static_paho_mqtt.sh  build_static_phao_mqtt.sh  gdmqttcom.gdextension  setup_example.sh  ubuntu_24.04_build.dockerfile  ubuntu_24.04_paho_mqtt_build.dockerfile
demo/: env  icon.svg.import  project.godot
demo/local-mqtt-broker/: .gitignore  docker-compose.yml
demo/local-mqtt-broker/config/: broker.crt  broker.key  ca.crt  mosquitto.acl  mosquitto.conf
demo/local-mqtt-broker/pki/: crl.pem  index.txt  index.txt.old  safessl-easyrsa.cnf  serial  serial.old
demo/local-mqtt-broker/pki/certs_by_serial/: 0409D645D2CF979F31E5FFA746D9DA63.pem  97F4E52D26C6081E36BE6DAF27E5DF03.pem  D39958EAA6E60DD154DDEA5FDDCAC3EA.pem
demo/local-mqtt-broker/pki/issued/: client_b.crt  client_c.crt  digitaltwin.crt
demo/local-mqtt-broker/pki/private/: ca.key  client_a.key  client_b.key  client_c.key  digitaltwin.key
demo/local-mqtt-broker/pki/reqs/: broker.req  client_a.req  client_b.req  client_c.req  digitaltwin.req  localhost.req
demo/scenes/: gd_mqtt_example.tscn
demo/scripts/: gd_mqtt_example.gd
include/gd_mqtt_com/: gd_mqtt_com.hpp  gd_remote_com.hpp  register_types.hpp
include/gd_mqtt_com/mqtt_com/: mqtt_com.hpp
src/: gd_mqtt_com.cpp  register_types.cpp
src/mqtt_com/: mqtt_com.cpp
tests/: test_mqtt_com.cpp
